--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,6 @@
 {
 	"editor.formatOnSave": true,
-	"editor.wordWrapColumn": 140,
-	"editor.tabSize": 2,
+	"editor.wordWrapColumn": 120,
 	"editor.detectIndentation": false,
-	"editor.insertSpaces": false,
-	"typescript.tsdk": "./node_modules/typescript/lib"
+	"editor.insertSpaces": false
 }
