--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,7 @@ license = "MIT"
 [dependencies]
 nom = "5.0.1"
 clap = "2.33.0"
-serde = "1.0.104"
-serde_derive = "1.0.104"
+serde = { version = "1.0.104", features = ["derive"] }
 
 [[bench]]
 name = "unl-impl-rust"
@@ -53,4 +52,4 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "unl-implementation-rust"
-path = "src/bin.rs"
+path = "src/bin/main.rs"
