Add basic String parsing Add rustfmt for standart formatting options Add options for rust (vscode) to use nightly Add basic parser files

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
 	"editor.formatOnSave": true,
 	"editor.wordWrapColumn": 120,
 	"editor.detectIndentation": false,
-	"editor.insertSpaces": false
+	"editor.insertSpaces": false,
+	"rust.unstable_features": true,
+	"rust-client.channel": "nightly"
 }
